--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -9,3 +9,22 @@ button{
     background-color: #836efa67 ;
     border: 0;
 }
+.customer-review-title{
+    font-size: 50px;
+    color: #6047eb;
+}
+.see-all{
+    background-color: #6047eb;
+    color: white;
+    text-align: center;
+    position: absolute;
+
+    
+}
+.button-div{
+    width: 100%;
+    position: relative;
+}
+.home-img{
+    height: 600px;
+}
